# geopolitical-fuel-forecast-ormuz

./: .gitignore  LICENSE  README.md  environment.yml  notas.txt  pyproject.toml  requirements.txt
data/processed/: brent_monthly.csv  fuel_dataset.csv  fuel_dataset_prepared.csv
data/raw/: brent_prices_raw.csv
notebooks/: 01_EDA_fuel_prices.ipynb  02_Modeling_fuel_prices.ipynb  03_Model_Results_and_Scenarios.ipynb
outputs/: model_diagnostics.csv  model_metrics.csv  ols_coefficients.csv  scenario_forecasts.csv  test_predictions.csv
scripts/: __init__.py  data_download.py  data_preparation.py  model_forecast.py  run_forecast.py
scripts/modeling/: __init__.py  config.py  data.py  econometrics.py  pipeline.py
